Fixed skills alignment issue

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -241,6 +241,7 @@ body {
 .skills-container {
 	display: flex; 
 	justify-content: space-between;
+	align-items: flex-start;
 	width: auto;
 	margin-left: 30%;
 	margin-right: 30%;
